--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,4 +7,9 @@
 <%= link_to "create new vendor", new_vendor_path %>
 <%= link_to "view all vendors", vendors_path %>
 
+<%= link_to "create new cycle count" , new_cycle_count_path %>
+<%= link_to "view all cycle counts" , cycle_counts_path %>
+
+
+
 
