added bootstrap and some basic initial frontend styling

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,10 @@
 <h1> all items </h1>
 
 <% @items.each do |item| %>
-  <%= link_to item.name, item_path(item) %>
-  <%= item.vendor.name %>
+<ul class="list-group list-group-flush">
+  <li class="list-group-item"><%= link_to item.name, item_path(item) %>
+  | <%= link_to item.vendor.name, vendor_path(item.vendor) %>
+  </li>
+</ul>
 <% end %>
 
