--- a/app/views/cycle_counts/show.html.erb
+++ b/app/views/cycle_counts/show.html.erb
@@ -1,4 +1,1 @@
-<h1> cycle count id: <%= @cycle_count.id %> </h1>
-<h2> begin to enter your cycle count </h2>
-
-<%= link_to "view all cycle counts", cycle_counts_path %>
+<%= render "item_cycle_counts/new" %>
