switched the views to cycle_counts from item_cycle_counts, added all items to appear on cycle_count show page

--- a/app/views/cycle_counts/show.html.erb
+++ b/app/views/cycle_counts/show.html.erb
@@ -1,1 +1,6 @@
 <%= render "item_cycle_counts/new" %>
+
+<% @all_items.each do |item| %>
+  <%= item.item.name %>
+  <%= item.item_quantity %>
+<% end %>
