--- a/app/views/item_cycle_counts/show.html.erb
+++ b/app/views/item_cycle_counts/show.html.erb
@@ -1,3 +1,6 @@
-<h1> item cycle count: <%= @item_cycle_count.id %> </h1>
+<h1> item cycle count # <%= @item_cycle_count.id %> </h1>
 
 <h2> items: <%= @item_cycle_count.item.name %> </h2>
+<h2> quantity: <%= @item_cycle_count.item_quantity %> </h2>
+
+<%= link_to "show all item cycle counts", item_cycle_counts_path %>
