added display for the most recent item_cycle_count update qty per item on the items index page, this is the current inventory

--- a/app/views/cycle_counts/index.html.erb
+++ b/app/views/cycle_counts/index.html.erb
@@ -3,7 +3,7 @@
 <% @cycle_counts.each do |cycle_count| %>
  <p>
   <%= link_to cycle_count.id, cycle_count_path(cycle_count) %>
-  <%= cycle_count.created_at %>
+  <%= cycle_count.updated_at %>
  </p>
 <% end %>
 
