small fix to new item being displayed with no item_cycle_counts existing to items index page

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -17,7 +17,9 @@
         <%= @updated_at.last %>
   </div>
   <div class="col-sm-3">
-   <%= item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %>
+    <% if item.item_cycle_counts.present?%>
+      <%= item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %>
+    <% end %>
  </div>
  </div>
   <% end %>
