--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,6 +14,9 @@
     <%= link_to "create new cycle count" , new_cycle_count_path %>
   | <%= link_to "view all cycle counts" , cycle_counts_path %>
   </li>
+  <li class="list-group-item">
+    <%= link_to "view all end-of-month cycle counts" , item_cycle_counts_path %>
+</li>
 </ul>
 
 
