--- a/app/views/item_cycle_counts/index.html.erb
+++ b/app/views/item_cycle_counts/index.html.erb
@@ -1,5 +1,3 @@
-<h1> all item cycle counts </h1>
+<h1> end-of-month cycle counts </h1>
 
-<% @item_cycle_counts.each do |item_cycle_count| %>
- <p> <%= link_to item_cycle_count.id, item_cycle_count_path(item_cycle_count) %> </p>
-<% end %>
+
