--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -14,7 +14,7 @@
         <%  @updated_at.push(item_cycle_count.updated_at) %>
       <% end %>
   <div class="col-sm-3">
-        <%= @updated_at.last %>
+     last updated on:  <%= @updated_at.last %>
   </div>
   <div class="col-sm-3">
     <% if item.item_cycle_counts.present?%>
