--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
 <h1> all items | current on-hands</h1>
 
-<table class="table">
-  <thead>
+<table class="table table-hover">
+  <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
       <th scope="col">Item</th>
