--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -14,6 +14,12 @@
   <p>
     current on-hand: <%= @item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %> <br>
     updated on: <%= @updated_at.last   %>
+    <% @item.item_cycle_counts.each do |item_cycle_count| %>
+  </p>
+  <p>
+      <%= item_cycle_count.item_quantity %>
+      <%= item_cycle_count.updated_at.strftime("%B") %>
+    <% end %>
   </p>
     <% end %>
   </div>
