--- a/app/views/item_cycle_counts/index.html.erb
+++ b/app/views/item_cycle_counts/index.html.erb
@@ -50,7 +50,7 @@ to generate a new column for each month -->
             saving them to a variable -->
           <% item_cycle_counts_per_item_and_month = item_cycle_counts_per_month.select { |key, value| key.item == item } %>
           <!-- selecting the hash objects from the above saved variable where their
-          item equals the key.item (which is an item_cycle_count object) -->
+          item equals the item found in the key (which is an item_cycle_count object) -->
 
           <% if item_cycle_counts_per_item_and_month.keys.last.nil?%>
             <td> - </td>
