--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,7 +6,7 @@
       <th scope="col">#</th>
       <th scope="col">Item</th>
       <th scope="col">Vendor</th>
-      <th scope="col">Update Date</th>
+      <th scope="col">Updated On</th>
       <th scope="col">Current On-Hand</th>
       <th scope="col">Current Value</th>
     </tr>
@@ -24,13 +24,18 @@
         <%  @updated_at.push(item_cycle_count.updated_at) %>
       <% end %>
 
-        <td><%= @updated_at.last %></td>
+      <% if item.item_cycle_counts.present? %>
+        <td><%= @updated_at.last.strftime("%a, %b %-d %Y") %> @ <%=@updated_at.last.strftime("%H:%M") %> UTC</td>
+      <% else %>
+        <td> - </td>
+      <% end %>
 
     <% if item.item_cycle_counts.present?%>
         <td> <%= current_item_quantity = item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %></td>
-        <td> $<%= (current_item_quantity * item.value) %></td>
+        <td> <%= number_to_currency((current_item_quantity * item.value), precision: 0) %></td>
       <% else %>
-        <td> - <td>
+        <td> - </td>
+        <td> - </td>
     </tr>
     <% end %>
   <% end %>
