just added some comments to the cycle_counts new page

--- a/app/views/item_cycle_counts/_new.html.erb
+++ b/app/views/item_cycle_counts/_new.html.erb
@@ -14,4 +14,11 @@
 
 
 
+<!-- an idea for this page, is to display at the top all of the available items to
+count. as the user selects an item and submits it, the item 'moves' from the list of
+all available items and down into their 'counted' item collection. this will allow
+the user to clearly see which items they haven't counted, and will provide some feedback
+to the user while they are creating their cycle count. -->
 
+
+<!-- this page also needs to show how to count each item, ie 'box', 'each', 'roll' etc .. -->
