--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -23,7 +23,7 @@
     <% end %>
   </p>
     <% end %>
-      value: <%= @item.value %>
+      value: <%= number_to_currency(@item.value, precision:2) %>
   </div>
 
 <%= link_to "all items", items_path %>
