--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -32,7 +32,7 @@
 
     <% if item.item_cycle_counts.present?%>
         <td> <%= current_item_quantity = item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %></td>
-        <td> <%= number_to_currency((current_item_quantity * item.value), precision: 0) %></td>
+        <td> <%= number_to_currency(current_item_quantity * (item.value * item.count_measurement), precision: 0) %></td>
       <% else %>
         <td> - </td>
         <td> - </td>
