--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,31 +1,48 @@
-<h1> <%= @item.name %> </h1>
-<h2> <%= @item.vendor.name %> </h2>
-<p> created by: <%= @item.user.email.split("@")[0] %> </p>
-<p> value: <%= number_to_currency(@item.value, precision:2) %> per <%= @item.purchase_type %></p>
-<p> purchase as: <%= @item.purchase_type.pluralize %>
-<p> count as: <%= @item.count_type.pluralize %>, which is <%= @item.count_measurement %> <%= @item.purchase_type.pluralize %>
+
+<div class="col-sm-5">
+
+<div class="card border-light mb-3" style="max-width: 30rem;">
+
+  <h3 class="card-header"> <%= @item.name %> </h3>
+
+  <div class="card-body">
+
+      <h5 class="card-title"> supplier: <%= @item.vendor.name %> </h5>
+
+      <p class="card-text"> value: <%= number_to_currency(@item.value, precision:2) %> per <%= @item.purchase_type %> </p>
+      <p class="card-text"> purchase as: <%= @item.purchase_type.pluralize %> </p>
+      <p class="card-text"> count as: <%= @item.count_type.pluralize %>, which contain <%= @item.count_measurement %> <%= @item.purchase_type.pluralize %> </p>
+
+
+
+
 
 <% @updated_at = [] %>
       <% @item.item_cycle_counts.each do |item_cycle_count| %>
         <%  @updated_at.push(item_cycle_count.updated_at) %>
       <% end %>
-  <div class="col-sm-3">
 
-  </div>
-
-  <div class="col-sm-3">
     <% if @item.item_cycle_counts.present?%>
-  <p>
-    current on-hand: <%= @item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %> <br>
-    last updated on: <%= @updated_at.last.strftime("%a, %b %-d %Y") %> @ <%=@updated_at.last.strftime("%H:%M") %> UTC
+
+  <p class="card-text">  current on-hand: <%= @item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %> </p>
+  <p class="card-text"> last updated on: <%= @updated_at.last.strftime("%a, %b %-d %Y") %> @ <%=@updated_at.last.strftime("%H:%M") %> UTC </p>
     <% @item.item_cycle_counts.each do |item_cycle_count| %>
-  </p>
-  <p>
-      <%= item_cycle_count.user.email.split("@")[0] %>
-      counted <%= item_cycle_count.item_quantity %>
-      on <%= item_cycle_count.updated_at.strftime("%a, %b %-d %Y") %> @ <%=item_cycle_count.updated_at.strftime("%H:%M") %> UTC
+
+    </div>
+  </div>
+</div>
+
+<div class="col-sm-3">
+  <div class="card mb-3" style="width: 18rem;">
+    <div class="card-header"><%= item_cycle_count.updated_at.strftime("%a, %b %-d %Y") %> @ <%=item_cycle_count.updated_at.strftime("%H:%M") %> UTC</div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">
+          <%= item_cycle_count.user.email.split("@")[0] %>
+          counted <%= item_cycle_count.item_quantity %>
+      </li>
+    </ul>
+  </div>
     <% end %>
-  </p>
     <% end %>
   </div>
 
