--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,26 +5,26 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Items
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= new_vendor_path %>">create new vendor <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Cycle Counts
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= vendors_path %>">all vendors</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= new_item_path %>">create new item</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= items_path %>">all items</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= new_cycle_count_path %>">create new cycle count</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= item_cycle_counts_path %>">all end-of-month cycle counts</a>
       </li>
     </ul>
   </div>
+  logged in as <%= current_user.email.split("@")[0] %>
+  <%= link_to "sign out", destroy_user_session_path, method: :delete %>
 </nav>
