fixed an error I made in deleting the render in the cycle_count show page for the form. also set up some basic navbar aesthetics.

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="<%= root_path %>">Home</a>
+  <a class="navbar-brand" href="<%= root_path %>">home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -25,6 +25,10 @@
       </li>
     </ul>
   </div>
+  <% if current_user.nil? %>
+    log in
+  <% else %>
   logged in as <%= current_user.email.split("@")[0] %>
+  <% end %>
   <%= link_to "sign out", destroy_user_session_path, method: :delete %>
 </nav>
