--- a/app/views/cycle_counts/show.html.erb
+++ b/app/views/cycle_counts/show.html.erb
@@ -1,6 +1,58 @@
+
+<% @all_items_array = [] %>
+<% @all_selected_items_array = [] %>
+<% @all_items_array_ids = [] %>
+<% @all_selected_items_array_ids = [] %>
+
+<% @all_items.sort_by { |item| item.item.name}.each do |item| %>
+  <% @all_selected_items_array.push(item) %>
+<% end %>
+
+<% @items.sort_by { |item| item.name }.each do |item| %>
+  <% @all_items_array.push(item) %>
+<% end %>
+
+<% @all_items_array.each do |item| %>
+  <% @all_items_array_ids.push(item.id) %>
+<% end %>
+
+ <% @all_selected_items_array.each do |selected_item| %>
+  <% @all_selected_items_array_ids.push(selected_item.item.id) %>
+<% end %>
+
+
+  all selected items:
+<%= @all_selected_items_array_ids.uniq %>
+</p>
+
+<% @all_selected_items_array_ids.uniq.each do |item| %>
+  <% @all_items_array_ids.delete(item) %>
+<% end %>
+
+<% @remaining_item_ids = @all_items_array_ids %>
+
+ <div class="container">
+  <div class="row">
+
+  <% @remaining_item_ids.each do |remaining_item| %>
+    <% @final_item_list = @all_items_array.filter { |item| item.id == remaining_item} %>
+    <% @final_item_list.each do |item| %>
+      <div class="col-sm-3">
+        <div class="card" style="width: 18rem;">
+
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><%= item.name %></li>
+            </ul>
+          </div>
+        </div>
+  <% end %>
+  <% end %>
+  </div>
+</div>
+
 <%= render "item_cycle_counts/new" %>
 
-<% @all_items.each do |item| %>
-  <%= item.item.name %>
-  <%= item.item_quantity %>
-<% end %>
+
+
+<!-- # ^ here you must be comparing item.id, because you're actually
+# comparing an item_cycle_count to an item. -->
