--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -31,6 +31,7 @@
         <td> - </td>
       <% end %>
 
+    <% if item.item_cycle_counts.present? %>
       <% if (Date.today - @updated_at.last.to_date).to_i == 1 %>
           <td> <%= (Date.today - @updated_at.last.to_date).to_i %> day ago </td>
         <% elsif (Date.today - @updated_at.last.to_date).to_i > 0 %>
@@ -38,6 +39,9 @@
         <% else %>
           <td> today </td>
       <% end %>
+    <% else %>
+          <td> - </td>
+    <% end %>
 
     <% if item.item_cycle_counts.present?%>
         <td> <%= current_item_quantity = item.item_cycle_counts.find_by(updated_at:@updated_at.last).item_quantity %> <%= item.count_type.pluralize(current_item_quantity) %></td>
