--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,15 +1,16 @@
-<%= simple_form_for(@item) do |f| %>
-  <%= f.input :name, label: "item name" %>
-  <%= f.association :vendor, label: "vendor" %>
-  <%= f.input :value, label: "value" %>
-  <%= f.input :inshape_stock_id, label: "inshape_stock_id" %>
-  <%= f.input :vendor_stock_id, label: "vendor stock id"%>
-  <%= f.input :purchase_link, label: "purchase_link" %>
-  <%= f.input :count_measurement, label: "count_measurement", hint: "how many eaches are in the count measurement" %>
-  <%= f.input :count_type, label: "count_type", collection: ["box", "roll", "each", "pallet"] %>
-  <%= f.input :purchase_type, label: "purchase_type", collection: ["box", "roll", "each", "pallet"]  %>
-  <%= f.input :minimum, label: "minimum" %>
-  <%= f.button :submit %>
-<% end %>
+
+  <%= simple_form_for(@item) do |f| %>
+    <%= f.input :name, label: "item name" %>
+    <%= f.association :vendor, label: "vendor" %>
+    <%= f.input :value, label: "value" %>
+    <%= f.input :inshape_stock_id, label: "inshape_stock_id" %>
+    <%= f.input :vendor_stock_id, label: "vendor stock id"%>
+    <%= f.input :purchase_link, label: "purchase_link" %>
+    <%= f.input :count_measurement, label: "count_measurement", hint: "how many eaches are in the count measurement" %>
+    <%= f.input :count_type, label: "count_type", collection: ["box", "roll", "each", "pallet"] %>
+    <%= f.input :purchase_type, label: "purchase_type", collection: ["box", "roll", "each", "pallet"]  %>
+    <%= f.input :minimum, label: "minimum" %>
+    <%= f.button :submit, class: "btn-primary" %>
+  <% end %>
 
 
