--- a/app/views/cycle_counts/show.html.erb
+++ b/app/views/cycle_counts/show.html.erb
@@ -37,7 +37,10 @@
       <div class="col-sm-3">
         <div class="card" style="width: 18rem;">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item"><%= item.name %></li>
+              <li class="list-group-item">
+                <%= item.name %>,
+                count as <%= item.count_type.pluralize %>
+              </li>
             </ul>
           </div>
         </div>
