also reversed the cycle count history for items_show

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -53,10 +53,10 @@
     </tr>
     <% end %>
        <% need = item.minimum - current_item_quantity %>
-        <% if need >= 0 %>
+        <% if need > 0 %>
           <td><%= need %> <%= item.count_type.pluralize(need) %></td>
         <% else %>
-          <td> none </td>
+          <td> - </td>
         <% end %>
   <% end %>
   </tbody>
