added front end styling all over the place

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -2,3 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+.table {
+  font-family: monospace;
+}
+
+h3 {
+  font-family: monospace;
+}
