--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,11 @@
   </div>
 
   <div class="signature">
-    <p>built w/ ruby on rails by rhaasti </p>
+    <p>
+      built by rhaasti <a href="https://github.com/rhaasti"> <i class="fab fa-github"></i></a>
+    </p>
   </div>
 </div>
+
+
 
