--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,4 +1,5 @@
 .banner {
+  font-family: monospace;
   position: fixed;
   padding-top: 20%;
 
@@ -23,7 +24,12 @@
 }
 
 .banner .signature p {
-  font-size: 15px;
-  padding-left: 90%;
+  font-size: 20px;
+  font-weight: bold;
+  padding-left: 92%;
   padding-top: 20%;
+}
+
+.banner a {
+  color: inherit;
 }
