--- a/app/assets/stylesheets/item_cycle_counts.scss
+++ b/app/assets/stylesheets/item_cycle_counts.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the ItemCycleCounts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+h3 {
+  font-family: monospace;
+}
